_sass/theme.scss
@charset "utf-8";

// --------------------------------------------------------
//			Variables
// --------------------------------------------------------

// Font
$Monospace: 				Overpass Mono, monospace;
$SansSerif: 				Overpass, sans-serif;
$base-font-size:            13px !default;
$base-font-weight:          400 !default;
$small-font-size:           $base-font-size * 0.875 !default;

// Spacing
$base-size:                 16px !default;
$base-line-height:          1.6 !default;
$spacing-unit:              8px !default;

// Tables
$table-text-align:          left !default;

// Media Query Widths
$small:                     375px !default;
$shmedium:                  568px !default;
$medium:                    768px !default;
$regular:                   1024px !default;
$large:                     1280px !default;
$xlarge:					1440px !default;
$xxlarge:					1700px !default;	

// Color Themes
$light-colors: (
	bg:						#FFFFFF,
	bg-highlight:			#F5F2EC,
	brand:					#BEA761,
	brand-highlight:		#f6ead1,
	text:					#1E152A,
	text-lighter:			#7F7F7F,
	alt:                 	#9E2D3A,
	heading:				#1E152A,
	blockquote:				#9E2D3A,
	highlight:				#F5F2EC,
);

$dark-colors: (
	bg:						#000000,
	bg-highlight:			#13131b,
	brand:					#BEA761,
	brand-highlight:		#353022,
	brand-darkest-faded:	#27251f,
	alt:					#9E2D3A,
	text:					#aeaca9,
	text-lighter:			#7F7F7F,
	bold:           		#BBBBBB,
	heading:				#efefef,
	blockquote:				#7e2b34,
	highlight:				#222234,
);

// --------------------------------------------------------
//			Mixins and Functions
// --------------------------------------------------------

// Easier CSS Variables to use in .scss files
@function v($color-name) {
	@return var(--color-#{$color-name});
}

// 			Media Queries
// --------------------------------------------------------
@mixin media-query($device) {
	@media screen and (min-width: $device) {
		@content;
	}
}

// 			Fluid Typography (must be in px)
// --------------------------------------------------------
$min_width:                 320px;
$max_width:                 $large;
$min_font:                  $base-size;
$max_font:                  22px;
$mod_1:                     1.2; // Mobile
$mod_2:                     1.6; // Desktop
@function strip-unit($value) {
	@return $value / ($value * 0 + 1);
}
@mixin fluid-type($min-vw, $max-vw, $min-font-size, $max-font-size) {
    font-size: $min-font-size;
    @media screen and (min-width: $min-vw) {
        font-size: calc(#{$min-font-size} + #{strip-unit($max-font-size - $min-font-size)} * ((100vw - #{$min-vw}) / #{strip-unit($max-vw - $min-vw)}));
    }
    @media screen and (min-width: $max-vw) {
        font-size: $max-font-size;
    }
}

// 			Coin Photo Style
// --------------------------------------------------------
@mixin coingold {
	background-image: url(/assets/images/svg/coin-gold-ring.svg);
	background-size: contain;
	background-repeat: no-repeat;
	position: absolute;
	height: 59px;
	width: 59px;
	margin: -3.7px 0 0 0;
	@include media-query($medium) {
		height: 95px;
		width: 95px;
		margin: -5.5px 0 0 0;
	}
}
@mixin coinphoto {
	border-radius: 100%;
	grid-column: 1 / 2;
	grid-row: 1 / 4;
	max-height: 55px;
	max-width: 55px;
	margin: 0 0 0 3.3px;
	clip-path: url(#coin-path-tiny);
	-webkit-clip-path: url(#coin-path-tiny);
	@include media-query($medium) {
		max-height: 85px;
		max-width: 85px;
		margin: 0 0 0 6px;
		clip-path: url(#coin-path-small);
		-webkit-clip-path: url(#coin-path-small);
	}      
	img {
		border-radius: 100%;
		max-height: 55px;
		max-width: 55px;
		margin: 0;
		clip-path: url(#coin-path-tiny);
		-webkit-clip-path: url(#coin-path-tiny);     
		@include media-query($medium) {
			max-height: 85px;
			max-width: 85px;
			clip-path: url(#coin-path-small);
			-webkit-clip-path: url(#coin-path-small);
		}
	}
}

// 			Grid Widths
// --------------------------------------------------------

// Full width up to shmedium, then normal
@mixin grid-full-width-normal { 
	grid-column: 1 / 17;
	@include media-query($shmedium) {
		grid-column: 3 / 15;
	}
	@include media-query($regular) {
		grid-column: 4 / 14;
	}
	@include media-query($xlarge) {
		grid-column: 5 / 13;
	}
	@include media-query($xxlarge) {
		grid-column: 6 / 12;
	}
}
// Normal width such as main content paragraphs
@mixin grid-normal {
	grid-column: 2 / 16;
	@include media-query($shmedium) {
		grid-column: 3 / 15;
	}
	@include media-query($regular) {
		grid-column: 4 / 14;
	}
	@include media-query($xlarge) {
		grid-column: 5 / 13;
	}
	@include media-query($xxlarge) {
		grid-column: 6 / 12;
	}
}
// Offset - Normal width but offset for sidebar
@mixin grid-offset {
	grid-column: 2 / 16;
	@include media-query($shmedium) {
		grid-column: 3 / 15;
	}
	@include media-query($medium) {
		grid-column: 5 / 16;
	}
	@include media-query($regular) {
		grid-column: 6 / 15;
	}
	@include media-query($xlarge) {
		grid-column: 6 / 14;
	}
	@include media-query($xxlarge) {
		grid-column: 7 / 13;
	}
}
// Offset sidebar
@mixin grid-offset-sidebar {
	display: none;	
	@include media-query($medium) {
		display: initial;
		grid-row: 1 / 1000000;
		padding-right: 1rem;
		grid-column: 2 / 5;
	}
	@include media-query($regular) {
		grid-column: 3 / 6;
	}
	@include media-query($xlarge) {
		grid-column: 4 / 6;
	}
	@include media-query($xxlarge) {
		grid-column: 5 / 7;
	}
}
// Normal width up to regular, then 1 grid col wider
@mixin grid-wide {
	grid-column: 2 / 16;
	@include media-query($regular) {
		grid-column: 3 / 15;
	}
	@include media-query($xlarge) {
		grid-column: 4 / 14;
	}
	@include media-query($xxlarge) {
		grid-column: 5 / 13;
	}
}
// Full width up to regular, then 1 grid col wider
@mixin grid-full-width-wide {
	grid-column: 1 / 17;
	@include media-query($regular) {
		grid-column: 3 / 15;
	}
	@include media-query($xlarge) {
		grid-column: 4 / 14;
	}
	@include media-query($xxlarge) {
		grid-column: 5 / 13;
	}
}
// Full width up to regular, then 1 grid col wider
@mixin grid-full-width-very-wide {
	grid-column: 1 / 17;
	@include media-query($large) {
		grid-column: 2 / 16;
	}
	@include media-query($xxlarge) {
		grid-column: 3 / 15;
	}
}

// --------------------------------------------------------
//			Import Partials
// --------------------------------------------------------

@import
	"theme/base",
	"theme/layout",
	"theme/styles",
	"theme/subscribe",
	"theme/card",
	"theme/rec-article",
	"theme/resume",
	"theme/accordion",
	"theme/syntax-highlighting"
;

